@@ -1,3 +1,8 @@
+Feb 2, 2003
+
+  * FIXED: call_with_time_limit/2 if the argument goal fails.  Wouter
+    Jansweijer.
+
 Dec 18, 2002
 
   * FIXED: make all socket calls resume on EINTR (Unix systems).
